--- a/src/PP/HeaderBundle/Resources/public/css/style.sass
+++ b/src/PP/HeaderBundle/Resources/public/css/style.sass
@@ -53,7 +53,7 @@ header
 					z-index: 80
 
 		.search
-			width: calc(100% - 370px)
+			width: calc(100% - 470px)
 			height: 80px
 			display: inline-block
 			float: left
@@ -328,7 +328,7 @@ header
 								margin: 20px 0
 
 		nav.menu
-			width: 102px
+			max-width: 102px
 			height: 76px
 			display: inline-block
 			float: right
