--- a/src/PP/HeaderBundle/Resources/views/header/header.html.twig
+++ b/src/PP/HeaderBundle/Resources/views/header/header.html.twig
@@ -160,6 +160,13 @@
                     </li>
                 </ul>
             </div>
+            <nav class="menu">
+                <ul>
+                    <li class="search-rbutton-container">
+                        <a href="" class="search-rbutton" title="Find pictures, requests or users on Prestapic..."></a>
+                    </li>
+                </ul>
+            </nav>
         {% endif %}
         </div>
         
