Responsive Messages + Profils + Settings + Requests

--- a/app/Resources/views/layout.html.twig
+++ b/app/Resources/views/layout.html.twig
@@ -71,7 +71,7 @@
             <base href=" " />
             {% block bellowHeader %}                     
             {% endblock %}  
-            <section class="main">
+            <section id="maincontainer" class="main">
                 <div class="content">
                     {% block body %}
                     {% endblock %}
