--- a/src/AppBundle/Resources/public/css/init.sass
+++ b/src/AppBundle/Resources/public/css/init.sass
@@ -37,6 +37,7 @@ $icon-search: "\e906"
 $icon-cross: "\e90c"
 $icon-warning: "\e90b"
 $icon-explore: "\e912"
+$icon-left: "\e918"
 $icon-right: "\e913"
 $icon-plus: "\e917"
 $icon-minus: "\e916"
