--- a/src/PP/RequestBundle/Resources/public/css/style.sass
+++ b/src/PP/RequestBundle/Resources/public/css/style.sass
@@ -4,6 +4,10 @@ section.main
 	width: 100%
 	padding: 45px 0
 	display: inline-block
+	margin-top: 76px
+
+	&.profile
+		margin-top: 0
 
 	.main-left
 		width: 100%
