--- a/src/PP/UserBundle/Resources/public/css/style.sass
+++ b/src/PP/UserBundle/Resources/public/css/style.sass
@@ -343,9 +343,11 @@ section.profile-container
 			z-index: 1
 
 .full-main
-	width: 1200px
+	width: 100%
+	max-width: 1200px
 	height: auto
 	display: block
+	margin: 0 auto
 
 	.full-main-top
 		width: 100%
@@ -375,6 +377,7 @@ section.profile-container
 			height: auto
 			border-bottom: 1px solid rgba(0,0,0,.1)
 			font-size: 16px
+			margin-bottom: 10px
 
 			.fcontent-top
 				padding: 10px 15px
