--- a/src/PP/UserBundle/Resources/views/Profile/show_profile.html.twig
+++ b/src/PP/UserBundle/Resources/views/Profile/show_profile.html.twig
@@ -53,6 +53,10 @@
 {% endblock %}
 
 {% block body %}   
+    <script>
+        var e = document.getElementById("maincontainer");
+        e.className += " profile";
+    </script>
     <div class="main-left" >
        
         {% if pageProfile.enabled == true %}
