--- a/src/PP/MessageBundle/Resources/public/css/style.sass
+++ b/src/PP/MessageBundle/Resources/public/css/style.sass
@@ -17,7 +17,8 @@ section.overlay-messages
 
 	.messages
 		background: white
-		width: 900px
+		width: 90%
+		max-width: 900px
 		height: 100%
 		max-height: 600px
 		position: absolute
@@ -39,68 +40,7 @@ section.overlay-messages
 			width: 100%
 			height: 100%
 
-			.message-top
-				width: 100%
-				height: 50px
-				background: white
-				display: -webkit-flex
-				display: -moz-box
-				display: -ms-flexbox
-				display: flex
-				flex-direction: row
-				font-size: 20px
-				color: #444
-				border-bottom: 1px solid rgba(0,0,0,.1)
-				
-				.inbox-top
-					width: 300px
-					padding: 10px 15px
-					border-right: 1px solid rgba(0,0,0,.1)
-					display: -webkit-flex
-					display: -moz-box
-					display: -ms-flexbox
-					display: flex
-					position: relative
-					text-transform: uppercase
-					font-weight: 600
-					font-size: 18px
-
-					a.button
-						padding: 5px 8px
-
-						&.new-message
-							position: absolute
-							top: 8px
-							right: 8px
-
-				.chat-top
-					width: 600px
-					padding: 10px 15px
-					display: -webkit-flex
-					display: -moz-box
-					display: -ms-flexbox
-					display: flex
-					
-					.button-close
-						float: right
-						position: absolute
-						border: none
-						background: transparent
-						padding: 2px 15px
-						margin: 0
-						top: 0
-						right: 0
-						color: #ccc
-						font-family: -apple-system, ".SFNSText-Regular", "Helvetica Neue", "Roboto", "Segoe UI", sans-serif
-						letter-spacing: 0
-						font-weight: 300
-						font-style: normal
-						font-size: 32px
-						
-						&:hover
-							color: $main-color
-
-			.message-bottom
+			.message
 				background: white
 				width: 100%
 				height: 100%
@@ -112,6 +52,57 @@ section.overlay-messages
 				align-items: stretch
 				overflow: hidden
 
+				.button-close
+					float: right
+					position: absolute
+					border: none
+					background: transparent
+					padding: 2px 15px
+					margin: 0
+					top: 0
+					right: 0
+					color: #ccc
+					font-family: -apple-system, ".SFNSText-Regular", "Helvetica Neue", "Roboto", "Segoe UI", sans-serif
+					letter-spacing: 0
+					font-weight: 300
+					font-style: normal
+					font-size: 32px
+					
+					&:hover
+						color: $main-color
+
+					&:focus
+						box-shadow: none
+
+				.inbox, .search-box
+					.inbox-top
+						background: white
+						border-bottom: 1px solid rgba(0, 0, 0, 0.1)
+						width: 100%
+						height: 45px
+						font-size: 20px
+						color: #444
+						padding: 10px 15px
+						display: -webkit-flex
+						display: -moz-box
+						display: -ms-flexbox
+						display: flex
+						position: relative
+						text-transform: uppercase
+						font-weight: 600
+						font-size: 18px
+
+						a.button
+							padding: 5px 8px
+
+							&.new-message
+								position: absolute
+								top: 8px
+								right: 8px
+
+						.button-close
+							display: none
+
 				.inbox
 					background: #fafafa
 					width: 300px
@@ -122,6 +113,7 @@ section.overlay-messages
 					border-right: 1px solid rgba(0,0,0,.1)
 					overflow-x: hidden
 					overflow-y: auto
+					flex-direction: column
 					
 					ul.list-mess
 						margin: 0
@@ -133,7 +125,7 @@ section.overlay-messages
 							
 							a
 								display: block
-								width: 300px
+								width: 100%
 								height: 78px
 								padding: 15px
 								
@@ -173,7 +165,7 @@ section.overlay-messages
 					ul
 						overflow-y: auto
 						display: block
-						width: 300px
+						width: 100%
 						height: 501px
 
 						li.search-box-user
@@ -189,6 +181,7 @@ section.overlay-messages
 								padding: 15px
 								display: block
 								line-height: 46px
+								text-decoration: none
 
 								&:hover
 									background: rgba(0, 0, 0, 0.03)
@@ -199,17 +192,49 @@ section.overlay-messages
 									height: 46px
 									margin-right: 10px
 
-
-
 				.chat-container
 					background: white
-					width: 600px
+					width: calc(100% - 300px)
 					height: auto
 					display: -webkit-flex
 					display: -moz-box
 					display: -ms-flexbox
 					display: flex
 					flex-direction: column
+
+					.chat-top
+						background: white
+						border-bottom: 1px solid rgba(0, 0, 0, 0.1)
+						width: 100%
+						min-height: 45px
+						font-size: 20px
+						color: #444
+						padding: 10px 15px
+						display: -webkit-flex
+						display: -moz-box
+						display: -ms-flexbox
+						display: flex
+						position: relative
+
+						a.back-list
+							display: none
+							position: absolute
+							width: 100%
+							height: 100%
+							top: 0
+							left: 0
+							color: transparent
+							font-size: 0
+
+							&:before
+								content: $icon-left
+								font-family: "pp-font"
+								font-size: 10px
+								line-height: 10px
+								position: absolute
+								top: 19px
+								left: 15px
+								color: $texts
 
 					.chat-conversation
 						display: -webkit-flex
