--- a/src/PP/RequestBundle/Resources/views/Request/sideInfo.html.twig
+++ b/src/PP/RequestBundle/Resources/views/Request/sideInfo.html.twig
@@ -4,7 +4,7 @@
     <ul class="tag-list">
         {% for tag in popularTags %}    
             <li class="tag-item">
-                <a target="_self" class="tag" href="{{ path('pp_request_homepage', {'tags':tag.id }) }}" title="{{tag.usedNb}} request{% if tag.usedNb > 1 %}s{% endif %}">{{ tag.name }}</a>
+                <a target="_self" class="tag" href="{{ path('pp_request_homepage', {'tags':tag.tag.id }) }}" title="{{tag.tag.usedNb}} request{% if tag.tag.usedNb > 1 %}s{% endif %}">{{ tag.tag.name }}</a>
             </li>            
         {% endfor %}
     </ul>
