Jumbotron + alerts + responsive fixes

--- a/src/AppBundle/Resources/public/css/alertbanner.sass
+++ b/src/AppBundle/Resources/public/css/alertbanner.sass
@@ -5,7 +5,11 @@ section.alert-banner
 	display: none
 	color: white
 	padding: 13px 0
-	position: absolute
+	position: fixed
+	bottom: 0
+
+	div.content
+		padding: 0 15px
 
 	&.info
 		display: block
