--- a/src/AppBundle/Resources/public/css/responsive.sass
+++ b/src/AppBundle/Resources/public/css/responsive.sass
@@ -75,7 +75,7 @@
 	section.main
 		margin-top: 56px
 
-		&.profile
+		&.notop
 			margin-top: 0
 
 		.sidebar
@@ -241,7 +241,7 @@
 	section.jumbotron
 		background: #D8D8D8
 		background-image: none
-		padding: 60px 20px
+		padding: 116px 20px 60px
 		font-size: 18px
 
 		.line
