--- a/src/PP/UserBundle/Resources/views/Profile/show_profile.html.twig
+++ b/src/PP/UserBundle/Resources/views/Profile/show_profile.html.twig
@@ -55,7 +55,7 @@
 {% block body %}   
     <script>
         var e = document.getElementById("maincontainer");
-        e.className += " profile";
+        e.className += " notop";
     </script>
     <div class="main-left" >
        
