--- a/src/PP/HeaderBundle/Resources/views/header/header.html.twig
+++ b/src/PP/HeaderBundle/Resources/views/header/header.html.twig
@@ -5,7 +5,7 @@
         </h1>
 
         <div id="searchContainer" class="search"> 
-            <a ng-click="header.hideSearchBar()" href="">BACK</a>
+            <a class="back-search button" ng-click="header.hideSearchBar()" href="">BACK</a>
             {{ render(controller('PPHeaderBundle:header:showFilters')) }}
         </div>   
         <div class="header-actions">       
@@ -164,7 +164,7 @@
             <nav class="menu">
                 <ul>
                     <li class="search-rbutton-container">
-                        <a href="" class="search-rbutton" title="Find pictures, requests or users on Prestapic..."></a>
+                        <a href="" ng-click="header.showSearchBar()" class="search-rbutton" title="Find pictures, requests or users on Prestapic..."></a>
                     </li>
                 </ul>
             </nav>
