--- a/app/Resources/views/layout.html.twig
+++ b/app/Resources/views/layout.html.twig
@@ -36,7 +36,7 @@
         {# ALERT BANNER #}
         {% for flashMessage in app.session.flashbag.get('emailConfirmed') %}            
             {% if flashMessage == "success" %}
-             <section id="alert-banner" class="alert-banner success" style='display: block; position: relative;'>
+             <section id="alert-banner" class="alert-banner success" style='display: block;'>
                 <div class="content">
                     <strong id="alert-banner-strong">Well Done !</strong> 
                     <span id="alert-banner-span">You email is now confirmed</span>
@@ -45,7 +45,7 @@
             {% endif%}
         {% endfor %}
         {% if is_granted("IS_AUTHENTICATED_REMEMBERED") and app.user.emailConfirmed == false %}
-            <section id="alert-banner" class="alert-banner warning" style='display: block; position: relative;'>
+            <section id="alert-banner" class="alert-banner warning" style='display: block;'>
                 <div class="content">
                     <strong id="alert-banner-strong">Warning</strong> 
                     <span id="alert-banner-span">You haven't confirm you email yet. Please check your email and click on the link</span>
