--- a/src/PP/HeaderBundle/Resources/views/header/header.html.twig
+++ b/src/PP/HeaderBundle/Resources/views/header/header.html.twig
@@ -5,7 +5,7 @@
         </h1>
 
         <div id="searchContainer" class="search"> 
-            <a class="back-search button" ng-click="header.hideSearchBar()" href="">BACK</a>
+            <a class="back-search" ng-click="header.hideSearchBar()" href=""></a>
             {{ render(controller('PPHeaderBundle:header:showFilters')) }}
         </div>   
         <div class="header-actions">       
