--- a/src/PP/HeaderBundle/Resources/public/css/style.sass
+++ b/src/PP/HeaderBundle/Resources/public/css/style.sass
@@ -65,6 +65,23 @@ header
 
 			.back-search
 				display: none
+				position: absolute
+				top: 20px
+				left: 30px
+				z-index: 81
+				width: 36px
+				height: 36px
+				padding: 10px
+				text-decoration: none
+
+				&:before
+					content: $icon-back
+					font-family: "pp-font"
+					font-size: 14px
+					line-height: 14px
+					width: 14px
+					height: 14px
+					color: $content
 
 			form
 				position: relative
@@ -88,7 +105,7 @@ header
 					margin: 0
 					padding: 0
 					width: 87px
-					height: 80px
+					height: auto
 					position: absolute
 					top: 0
 					right: 10px
@@ -653,8 +670,9 @@ header
 								text-decoration: underline
 								background: transparent
 
+@media(min-width: 980px)
 	// PROFILE HEADER
-	&.profile
+	header.profile
 		background: rgba(0,0,0,.025)
 		position: fixed
 		border-color: rgba(255,255,255,.25)
