--- a/src/PP/RequestBundle/Resources/views/layout.html.twig
+++ b/src/PP/RequestBundle/Resources/views/layout.html.twig
@@ -15,7 +15,7 @@
                 <p class="line">
                     <strong> Send your request on Prestapic !</strong>
                 </p>
-                <a class="button learn" href="#" title="Learn more">Learn more</a>                
+                <a class="button learn" target="_self" href="{{ path('page_about') }}" title="Learn more">Learn more</a>                
              </div>
          </section>
         {% endif %}                    
