--- a/src/PP/PropositionBundle/Resources/views/proposition/propositionPopup.html.twig
+++ b/src/PP/PropositionBundle/Resources/views/proposition/propositionPopup.html.twig
@@ -16,7 +16,7 @@
                             </div>                   
 
                             <div class="action-group center">
-                                    <a class="icon share" href="#"></a>
+                                    <!--<a class="icon share" href="#"></a>-->
                                     <a class="icon infos" ng-click="popup.openInfo()" href="#"></a>
                                     <a target="_self" class="icon download" href="{{ proposition.image }}" download="{{ proposition.title }}"></a>
                                     {% endverbatim %}
