adding about page style + content

--- a/src/AppBundle/Resources/public/css/global.sass
+++ b/src/AppBundle/Resources/public/css/global.sass
@@ -52,6 +52,11 @@ ul, ol, li
 	margin: 0
 	list-style: none
 
+hr
+	border: 1px solid rgba(0,0,0,.1)
+	margin: 32px 0 16px
+	height: 0px
+
 img
 	border: none
 
