--- a/src/PP/PageBundle/Resources/public/css/style.sass
+++ b/src/PP/PageBundle/Resources/public/css/style.sass
@@ -90,3 +90,30 @@ section.breadcrumb
 				font-family: "pp-font"
 				font-size: 9px
 				color: $borders
+
+.page-container
+	max-width: 795px
+	margin: 0 auto
+
+.page-go_back
+	margin: 0 0 16px
+
+.page-content
+	background: white
+	width: 100%
+	height: auto
+	border-bottom: 1px solid rgba(0,0,0,.1)
+	font-size: 16px
+	margin-bottom: 10px
+
+.page-thumbnail
+	width: 100%
+	height: auto
+	overflow: hidden
+
+	img
+		width: 100%
+		height: auto
+
+.page-text
+	padding: 15px 25px 25px
