--- a/src/PP/PageBundle/Resources/views/about/about.html.twig
+++ b/src/PP/PageBundle/Resources/views/about/about.html.twig
@@ -20,6 +20,48 @@
 {% endblock %}
 
 {% block pageBody %}
-    <h1>About</h1>
-    
+
+    <section class="page-container">
+        <div class="page-content">
+            <div class="page-thumbnail">
+                <img src="{{ asset("images/about_wip.png") }}" alt="About Prestapic (work in progress...)">
+            </div>
+            <div class="page-text">
+                <h2>About Prestapic</h2>
+                <p>
+                    Prestapic is a website for <strong>finding and sharing royalty-free pictures</strong>. If you are looking for a visual, whether it’s a photo, a drawing or an icon, just post a request. Once you have made a request, <strong>everybody with an account on Prestapic can suggest one or more image(s)</strong>.
+                </p>
+                <p>
+                    If you like creating images, drawings or taking photographs, this website is also for you, you can suggest your images to those who need one.
+                </p>
+                <p>
+                    All suggested images on the website are free to use and licensed under <a href="http://creativecommons.org/publicdomain/zero/1.0/">Creative Commons Zero</a>. They can be used for personal or professional purposes. For more information about image copyrights, visit <a href="http://creativecommons.org/publicdomain/zero/1.0/">the Creative Commons page</a>.
+                </p>
+                <p>
+                    Besides being an images sharing website, Prestapic relies on its community and does everything to improve online content and user interaction. Whether through <strong>instant conversations</strong>, <strong>comments</strong> or the ability to <strong>follow people</strong>.
+                </p>
+                <p>
+                    In addition, you can use Prestapic as an image bank, <strong>even without an account</strong>. With its simple <strong>categorisation system</strong> and ability to <strong>search by tags</strong>, you can easily find the image you are looking for. And if that’s not the case, try making an image request!
+                </p>
+                <hr>
+                <h2>Who made Prestapic?</h2>
+                <p>
+                    <img src="{{ asset("images/olivier_192.jpg") }}" alt="AlexandreJolly">
+                    <img src="{{ asset("images/alex_192.jpg") }}" alt="OlivierCoue">
+                </p>
+                <h3>
+                    <strong>Olivier & Alexandre</strong>
+                </h3>
+                <p>
+                    Developper & UI/UX designer
+                </p>
+                <p>
+                    <a href="http://prestapic.com/OlivierCoue">@OlivierCoue</a> <a href="http://prestapic.com/AlexandreJolly">@AlexandreJolly</a>
+                </p>
+                <hr>
+                <h2>Don't forget to follow us on <a href="http://twitter.com/prestapic">Twitter</a> or like our page on <a href="http://facebook.com/prestapic">Facebook</a>. XOXO 💋</h2>
+            </div>
+        </div>
+    </section>
+
 {% endblock %}
