--- a/src/PP/UserBundle/Resources/public/css/style.sass
+++ b/src/PP/UserBundle/Resources/public/css/style.sass
@@ -373,7 +373,7 @@ section.profile-container
 
 		.full-main-content
 			background: white
-			width: 390px
+			width: 100%
 			height: auto
 			border-bottom: 1px solid rgba(0,0,0,.1)
 			font-size: 16px
